--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=EEC-Task
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Bd+CIUWTN14o0LBUB58FfqWTdwLlgP8ZSRq1uFOJMbs=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=localhost
+DB_PORT=5432
+DB_DATABASE=eec-task
+DB_USERNAME=postgres
+DB_PASSWORD=mis@20222
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
